In task editor, swipe to save focused description from left margin. Show end task edit action when description is focused.

--- a/frontend/core/src/main/webapp/static/app/notes/noteEditor.html
+++ b/frontend/core/src/main/webapp/static/app/notes/noteEditor.html
@@ -136,7 +136,7 @@
 
             <!-- CONTENT -->
             <div ng-if="drawerAisleInitialized" class="row-vertically-centered with-textarea">
-              <textarea id="noteContent"
+              <textarea id="ignoreSnap"
                 ng-class="(onboardingInProgress && !contentFocused) && 'input-separate'"
                 ng-model="note.trans.content" input-model-validator ng-trim="false" msd-elastic
                 editable-field
