--- a/frontend/core/src/main/webapp/static/app/tasks/taskEditor.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/taskEditor.html
@@ -53,31 +53,27 @@
       <div class="swiper-slide" swiper-slide="taskEditor/basic" slide-index="0" ng-init="basicSlideInfo = {}">
 
         <div ng-style="{'padding-bottom': basicSlideInfo.footerHeight}" class="container-content"
-          drawer-override-aisle="right" swiper-prevent>
+          drawer-override-aisle="right" ng-init="drawerAisleInitialized = true" swiper-prevent>
 
           <!-- TASK TITLE -->
-          <form role="form" ng-hide="calendarOpen || descriptionFocused || listPickerOpen"
+          <form role="form" ng-hide="calendarOpen || taskDescriptionFocused || listPickerOpen"
             class="group-mixed with-checkbox" autocapitalize="none" autocorrect="off">
             <div class="group-mixed--left">
               <input type="checkbox" ng-click="clickCompleteTaskInEdit()" ng-model="task.trans.optimisticComplete"
                 ng-model-options="{getterSetter: true}" icon-checkbox="editorTitlebarCheckbox" />
             </div>
             <div class="group-mixed--middle">
-              <textarea ng-hide="isTaskTitleClamped()" ng-model="task.trans.title" input-model-validator
+              <textarea ng-model="task.trans.title" input-model-validator
                 ng-trim="false" ng-keydown="taskTitlebarTextKeyDown($event)"
                 editable-field editable-field-register-callbacks="registerTitleBarInputCallbacks(focus, blur)"
                 editable-field-focus="setTitleBarFocus()"
                 msd-elastic placeholder="enter task title&#8230;" maxlength="128">
               </textarea>
-              <div ng-if="isTaskTitleClamped()">
-                <span ng-class="{'text-downplayed': !task.trans.title}" class="text-clamped"
-                  ng-bind="task.trans.title ? task.trans.title : 'enter task title&#8230;'" clamp=2></span>
-              </div>
             </div>
           </form>
 
           <!-- DATE -->
-          <div ng-hide="calendarOpen || descriptionFocused || listPickerOpen" class="group-mixed with-checkbox">
+          <div ng-hide="calendarOpen || taskDescriptionFocused || listPickerOpen" class="group-mixed with-checkbox">
             <a href class="group-mixed--middle link-search-result" ng-class="!task.trans.due && 'downplayed'"
               ng-click="openCalendar()">
               <span class="text-field--title"
@@ -115,7 +111,7 @@
           </div>
 
           <!-- LIST -->
-          <div ng-hide="calendarOpen || descriptionFocused || listPickerOpen" class="group-mixed with-checkbox">
+          <div ng-hide="calendarOpen || taskDescriptionFocused || listPickerOpen" class="group-mixed with-checkbox">
             <a href class="group-mixed--middle link-search-result" ng-class="!task.trans.list && 'downplayed'"
               ng-click="openListPicker()">
               <span class="text-field--title"
@@ -139,9 +135,10 @@
           </div>
 
           <!-- DESCRIPTION -->
-          <div ng-hide="calendarOpen || listPickerOpen" class="row-vertically-centered with-textarea">
+          <div ng-if="drawerAisleInitialized" ng-hide="calendarOpen || listPickerOpen"
+            class="row-vertically-centered with-textarea expanded">
             <textarea id="ignoreSnap" ng-model="task.trans.description" input-model-validator ng-trim="false"
-              ng-focus="setDescriptionFocus(true)" ng-blur="setDescriptionFocus(false)" msd-elastic
+              ng-focus="setTaskDescriptionFocus(true)" ng-blur="setTaskDescriptionFocus(false)" msd-elastic
               placeholder="enter description&#8230;"
               maxlength="1024" autocapitalize="none" autocorrect="off">
             </textarea>
@@ -150,7 +147,7 @@
         </div>
 
         <footer ng-hide="isTaskFooterHidden(editorFooterHiddenCallback)"
-          class="container-content--after editor-footer animate-fade-in" editor-footer="basicSlideInfo"
+          class="container-content--after editor-footer" editor-footer="basicSlideInfo"
           editor-footer-ios-click editor-footer-start-expanded>
           <nav role="navigation" class="swiper-no-swiping group-symmetrical">
             <div class="group-symmetrical--middle">
