--- a/frontend/core/src/main/webapp/static/app/tasks/taskEditor.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/taskEditor.html
@@ -1,10 +1,11 @@
-<div class="container-fluid" ng-controller="TaskEditorController" ng-class="task.trans.deleted && 'container-disabled'">
+<div class="container-fluid" ng-class="task.trans.deleted && 'container-disabled'"
+  ng-controller="TaskEditorController" >
   <header class="container-titlebar">
     <div class="container-titlebar--inner">
       <div class="group-symmetrical height-large--top">
 
-        <a href ng-hide="isPickerOpen()"
-          class="group-symmetrical--left link-navigation highlighted active" ng-click="endTaskEdit()">
+        <a href ng-hide="isPickerOpen()" class="group-symmetrical--left link-navigation highlighted active"
+          ng-click="endTaskEdit()">
           <span class="text-navigation-back" ng-class="!isFirstSlide() && 'not-swipeable'"
             ng-bind="isTaskEdited() && !task.trans.deleted ? 'save' : 'back'">
           </span>
@@ -14,8 +15,8 @@
           <span class="text-edit">done</span>
         </a>
 
-        <div ng-hide="!isTaskPropertyInEdit() && isFirstSlide()"
-          ng-style="{maxWidth: calculateTitleWidth()}" class="group-symmetrical--middle width-large">
+        <div ng-hide="!isTaskPropertyInEdit() && isFirstSlide()" ng-style="{maxWidth: calculateTitleWidth()}"
+          class="group-symmetrical--middle width-large">
           <div style="display: table; width: 100%; height: 100%;">
             <div style="text-align: center; height: inherit; display: table-cell; vertical-align: middle;">
               <span class="text-heading-primary" ng-class="!task.trans.title && 'text-downplayed'"
@@ -25,13 +26,12 @@
           </div>
         </div>
 
-        <a href ng-if="!task.trans.deleted" ng-hide="isTaskPropertyInEdit()"
-          class="group-symmetrical--right" ng-click="deleteTaskInEdit()">
+        <a href ng-if="!task.trans.deleted" ng-hide="isTaskPropertyInEdit()" class="group-symmetrical--right"
+          ng-click="deleteTaskInEdit()">
           <span class="icon-trash"></span>
         </a>
         <a href ng-if="task.trans.deleted" ng-hide="isTaskPropertyInEdit()"
-          class="group-symmetrical--right link-navigation highlighted active"
-          ng-click="undeleteTask(task)">
+          class="group-symmetrical--right link-navigation highlighted active" ng-click="undeleteTask(task)">
           <span class="text-navigation">restore</span>
         </a>
 
@@ -64,17 +64,18 @@
                 ng-model-options="{getterSetter: true}" icon-checkbox="editorTitlebarCheckbox" />
             </div>
             <div class="group-mixed--middle">
-              <textarea ng-model="task.trans.title" input-model-validator
-                ng-trim="false" ng-keydown="taskTitlebarTextKeyDown($event)"
+              <textarea ng-model="task.trans.title" input-model-validator ng-trim="false"
+                ng-keydown="taskTitlebarTextKeyDown($event)"
                 editable-field editable-field-register-callbacks="registerTitleBarInputCallbacks(focus, blur)"
-                editable-field-focus="setTitleBarFocus()"
-                msd-elastic placeholder="enter task title&#8230;" maxlength="128">
+                editable-field-focus="setTitleBarFocus()" msd-elastic placeholder="enter task title&#8230;"
+                maxlength="128">
               </textarea>
             </div>
           </form>
 
           <!-- DATE -->
-          <div ng-hide="calendarOpen || taskDescriptionFocused || listPickerOpen" class="group-mixed with-checkbox">
+          <div ng-hide="calendarOpen || taskDescriptionFocused || listPickerOpen"
+            class="group-mixed with-checkbox">
             <a href class="group-mixed--middle link-search-result" ng-class="!task.trans.due && 'downplayed'"
               ng-click="openCalendar()">
               <span class="text-field--title"
@@ -87,9 +88,8 @@
           </div>
 
           <!-- CALENDAR -->
-          <div ng-if="calendarOpen" class="swiper-no-swiping animate-fade-in"
-            editable-field-container="auto" editable-field-container-clicked-elsewhere="closeCalendar()"
-            data-snap-ignore="true">
+          <div ng-if="calendarOpen" class="swiper-no-swiping animate-fade-in" editable-field-container="auto"
+            editable-field-container-clicked-elsewhere="closeCalendar()" data-snap-ignore="true">
 
             <div ng-if="task.trans.due" class="group-mixed with-checkbox">
               <a href class="group-mixed--middle link-search-result">
@@ -112,7 +112,8 @@
           </div>
 
           <!-- LIST -->
-          <div ng-hide="calendarOpen || taskDescriptionFocused || listPickerOpen" class="group-mixed with-checkbox">
+          <div ng-hide="calendarOpen || taskDescriptionFocused || listPickerOpen"
+            class="group-mixed with-checkbox">
             <a href class="group-mixed--middle link-search-result" ng-class="!task.trans.list && 'downplayed'"
               ng-click="openListPicker()">
               <span class="text-field--title"
@@ -139,8 +140,7 @@
           <textarea ng-if="drawerAisleInitialized" ng-hide="calendarOpen || listPickerOpen" id="ignoreSnap"
             ng-model="task.trans.description" input-model-validator ng-trim="false"
             ng-focus="setTaskDescriptionFocus(true)" ng-blur="setTaskDescriptionFocus(false)" msd-elastic
-            placeholder="enter description&#8230;"
-            maxlength="1024" autocapitalize="none" autocorrect="off">
+            placeholder="enter description&#8230;" maxlength="1024" autocapitalize="none" autocorrect="off">
           </textarea>
 
         </div>
@@ -163,11 +163,14 @@
         </footer>
       </div>
 
-      <div class="swiper-slide" swiper-slide="taskEditor/advanced" slide-index="1" ng-init="advancedSlideInfo = {}">
-        <div class="container-content" ng-style="{'padding-bottom': advancedSlideInfo.footerHeight}" swiper-prevent>
+      <div class="swiper-slide" swiper-slide="taskEditor/advanced" slide-index="1"
+        ng-init="advancedSlideInfo = {}">
+        <div class="container-content" ng-style="{'padding-bottom': advancedSlideInfo.footerHeight}"
+          swiper-prevent>
 
           <!-- CONTEXT -->
-          <div ng-hide="contextPickerOpen || repeatingPickerOpen || urlFocused" class="group-mixed with-checkbox">
+          <div ng-hide="contextPickerOpen || repeatingPickerOpen || urlFocused"
+            class="group-mixed with-checkbox">
             <a href class="group-mixed--middle link-search-result"
               ng-class="!task.trans.context && 'downplayed'" ng-click="openContextPicker()">
               <span class="text-field--title"
@@ -208,13 +211,15 @@
           <div ng-if="repeatingPickerOpen" class="swiper-no-swiping animate-fade-in"
             editable-field-container="auto" editable-field-container-scrollable="true"
             editable-field-container-clicked-elsewhere="closeRepeatingPicker()" data-snap-ignore="true">
-            <div list-picker="repeatTypes" list-picker-save="closeRepeatingPickerAndSetRepeatTypeToTask(task, list)"
+            <div list-picker="repeatTypes"
+              list-picker-save="closeRepeatingPickerAndSetRepeatTypeToTask(task, list)"
               list-picker-clear="closeRepeatingPickerAndClearRepeatTypeFromtask(task, list)"
               list-picker-get-selected="task.trans.repeating ? {trans: {title: task.trans.repeating}} : undefined"
               list-picker-type="repeating"></div>
           </div>
 
-          <div ng-hide="contextPickerOpen || repeatingPickerOpen" class="row-vertically-centered with-textarea">
+          <div ng-hide="contextPickerOpen || repeatingPickerOpen"
+            class="row-vertically-centered with-textarea">
             <textarea ng-model="task.trans.link" input-model-validator ng-trim="false"
               ng-focus="setUrlFocus(true)" ng-blur="setUrlFocus(false)" msd-elastic maxlength="128"
               placeholder="enter url&#8230;" autocapitalize="none" autocorrect="off">
