--- a/frontend/core/src/main/webapp/static/app/notes/noteEditor.html
+++ b/frontend/core/src/main/webapp/static/app/notes/noteEditor.html
@@ -184,17 +184,12 @@
           </div>
 
           <!-- CONTENT -->
-          <div ng-if="drawerAisleInitialized" ng-hide="listPickerOpen || keywordsPickerOpen"
-            class="row-vertically-centered with-textarea">
-            <textarea id="ignoreSnap"
-              ng-class="(onboardingInProgress && !contentFocused) && 'input-separate'"
-              ng-model="note.trans.content" input-model-validator ng-trim="false" msd-elastic
-              editable-field
-              editable-field-register-callbacks="registerNoteContentInputCallbacks(focus, blur)"
-              editable-field-focus="noteContentFocused()" editable-field-blur="noteContentBlurred()"
-              placeholder="enter content&#8230;" autocapitalize="none" autocorrect="off">
-            </textarea>
-          </div>
+          <textarea ng-if="drawerAisleInitialized" ng-hide="listPickerOpen || keywordsPickerOpen"
+            id="ignoreSnap" ng-class="(onboardingInProgress && !contentFocused) && 'input-separate'"
+            ng-model="note.trans.content" input-model-validator ng-trim="false" msd-elastic
+            ng-focus="setNoteContentFocus(true)" ng-blur="setNoteContentFocus(false)"
+            placeholder="enter content&#8230;" autocapitalize="none" autocorrect="off">
+          </textarea>
 
           <div ng-if="onboardingInProgress && note.trans.content.length" class="row">
             <span class="text-details">
