Fixed text at the end of the tutorial

--- a/frontend/core/src/main/webapp/static/app/lists/listsActive.html
+++ b/frontend/core/src/main/webapp/static/app/lists/listsActive.html
@@ -29,8 +29,9 @@
       <h2 class="group-heading instruction row">
         tutorial <span class="highlighted">complete</span>!
       </h2>
-      <div class="textgroup-ingress row">play, search and explore,
-        <span class="text-highlighted">extended mind</span> is yours
+      <div class="textgroup-ingress row">to back up your data
+        <a href class="highlighted" ng-click="completeOnboarding('user')"><span>sign up</span></a>
+        now for a free account
       </div>
     </div>
 
