--- a/frontend/core/src/main/webapp/static/app/notes/noteEditor.html
+++ b/frontend/core/src/main/webapp/static/app/notes/noteEditor.html
@@ -92,33 +92,54 @@
 
           <!-- COLLAPSIBLE-->
           <div ng-if="collapsibleOpen" ng-hide="isNotePropertyInEdit()">
-            <div ng-if="!note.trans.list" class="row-vertically-centered">
-              <a href class="downplayed" ng-click="openListPicker()">
-                <span class="text-search-result">select list&#8230;</span>
+
+            <!-- LIST -->
+            <div class="group-mixed with-checkbox">
+              <a href class="group-mixed--middle link-search-result" ng-class="!note.trans.list && 'downplayed'"
+                ng-click="openListPicker()">
+                <span class="text-field--title"
+                  ng-bind="note.trans.list ? note.trans.list.trans.title : 'select list\u2026'">
+                </span>
               </a>
+              <div ng-if="note.trans.list" class="group-mixed--right">
+                <span class="text-field--label">list</span>
+              </div>
             </div>
-            <div ng-if="!note.trans.keywords || !note.trans.keywords.length" class="row-vertically-centered">
-              <a href class="downplayed" ng-click="openKeywordsPicker()">
-                <span class="text-search-result">add keywords&#8230;</span>
+
+            <!-- KEYWORDS -->
+            <div class="group-mixed with-checkbox">
+              <a href class="group-mixed--middle link-search-result"
+                ng-class="(!note.trans.keywords || !note.trans.keywords.length) && 'downplayed'"
+                ng-click="openKeywordsPicker()">
+                <span class="text-field--title"
+                  ng-bind="(note.trans.keywords && note.trans.keywords.length) ? getKeywordsListString(note) : 'add keywords\u2026'">
+                </span>
               </a>
+              <div ng-if="note.trans.keywords && note.trans.keywords.length" class="group-mixed--right">
+                <span class="text-field--label">keywords</span>
+              </div>
             </div>
           </div>
-          <div ng-if="(!note.trans.list || (!note.trans.keywords || !note.trans.keywords.length)) && !onboardingInProgress"
-            ng-hide="isNotePropertyInEdit()" class="row collapsible">
+          <div ng-if="!onboardingInProgress" ng-hide="isNotePropertyInEdit()" class="row collapsible">
             <a href class="downplayed" ng-click="toggleCollapsible()">
               <span ng-class="collapsibleOpen ? 'text-expand-up' : 'text-expand-down'"
-              ng-bind="collapsibleOpen ? 'less' : 'more'"></span>
+                ng-bind="collapsibleOpen ? 'less' : 'more'"></span>
             </a>
           </div>
 
-          <!-- LIST -->
-          <div ng-if="note.trans.list" ng-hide="isNotePropertyInEdit()" class="group-mixed with-checkbox">
-            <a href class="group-mixed--middle link-search-result" ng-click="openListPicker()">
-              <span class="text-field--title" ng-bind="note.trans.list.trans.title"></span>
-            </a>
-            <div class="group-mixed--right">
-              <span class="text-field--label">list</span>
-            </div>
+          <!-- CONTENT -->
+          <textarea ng-if="drawerAisleInitialized" ng-hide="listPickerOpen || keywordsPickerOpen"
+            id="ignoreSnap" ng-class="(onboardingInProgress && !contentFocused) && 'input-separate'"
+            ng-model="note.trans.content" input-model-validator ng-trim="false" msd-elastic
+            editable-field editable-field-register-callbacks="registerNoteContentInputCallbacks(focus, blur)"
+            editable-field-focus="setNoteContentFocus(true)" editable-field-blur="setNoteContentFocus(false)"
+            placeholder="enter content&#8230;" autocapitalize="none" autocorrect="off">
+          </textarea>
+
+          <div ng-if="onboardingInProgress && note.trans.content.length" class="row">
+            <span class="text-details">
+              when done, save your note by clicking 'save' in the top-left corner or swipe left
+            </span>
           </div>
 
           <!-- LIST PICKER -->
@@ -130,17 +151,6 @@
               list-picker-save="closeListPickerAndSetListToItem(note, list)"
               list-picker-clear="closeListPickerAndClearListFromItem(note, list)"
               list-picker-get-selected="note.trans.list">
-            </div>
-          </div>
-
-          <!-- KEYWORDS -->
-          <div ng-if="note.trans.keywords && note.trans.keywords.length" ng-hide="isNotePropertyInEdit()"
-            class="group-mixed with-checkbox">
-            <a href class="group-mixed--middle link-search-result" ng-click="openKeywordsPicker()">
-              <span class="text-field--title" ng-bind="getKeywordsListString(note)"></span>
-            </a>
-            <div class="group-mixed--right">
-              <span class="text-field--label">keywords</span>
             </div>
           </div>
 
@@ -181,21 +191,6 @@
                 </div>
               </div>
             </div>
-          </div>
-
-          <!-- CONTENT -->
-          <textarea ng-if="drawerAisleInitialized" ng-hide="listPickerOpen || keywordsPickerOpen"
-            id="ignoreSnap" ng-class="(onboardingInProgress && !contentFocused) && 'input-separate'"
-            ng-model="note.trans.content" input-model-validator ng-trim="false" msd-elastic
-            editable-field editable-field-register-callbacks="registerNoteContentInputCallbacks(focus, blur)"
-            editable-field-focus="setNoteContentFocus(true)" editable-field-blur="setNoteContentFocus(false)"
-            placeholder="enter content&#8230;" autocapitalize="none" autocorrect="off">
-          </textarea>
-
-          <div ng-if="onboardingInProgress && note.trans.content.length" class="row">
-            <span class="text-details">
-              when done, save your note by clicking 'save' in the top-left corner or swipe left
-            </span>
           </div>
 
         </div>
