--- a/frontend/core/src/main/webapp/static/app/main/menu.html
+++ b/frontend/core/src/main/webapp/static/app/main/menu.html
@@ -1,17 +1,17 @@
 <div class="container-menu swiper-no-swiping" ng-controller="MenuController" drawer="left">
   <div class="container-menu--top">
 
-    <a href class="link-menu row" ng-click="gotoFeature('user')"
-      ng-class="{highlighted: isFeatureActive('user'), hidden: onboardingInProgress}">
+    <a href class="link-menu row onboarding-invisible" ng-click="gotoFeature('user')"
+      ng-class="isFeatureActive('user') && highlighted">
       <span class="text-navigation-menu-small" clamp=1 ng-bind="getActiveDisplayName()"></span>
     </a>
 
-    <a href class="link-menu separate row" ng-click="gotoFeature('focus')"
-      ng-class="{highlighted: isFeatureActive('focus'), hidden: onboardingInProgress}">
+    <a href class="link-menu separate row onboarding-invisible" ng-click="gotoFeature('focus')"
+      ng-class="isFeatureActive('focus') && highlighted">
       <span class="text-navigation-menu">focus</span>
     </a>
-    <a href class="link-menu row" ng-click="gotoFeature('inbox')"
-      ng-class="{highlighted: isFeatureActive('inbox'), hidden: onboardingInProgress}">
+    <a href class="link-menu row onboarding-invisible" ng-click="gotoFeature('inbox')"
+      ng-class="isFeatureActive('inbox') && highlighted">
       <span class="text-navigation-menu">inbox</span>
     </a>
     <a href class="link-menu row" ng-click="gotoFeature('tasks')"
